--- a/css/default.css
+++ b/css/default.css
@@ -15,3 +15,10 @@ background-color:green;
   background-color:blue;
  float:right;
   }
+  aside{
+    background-color:green;
+  }
+  aside{
+    background-color:purple;
+  }
+  
