--- a/css/default.css
+++ b/css/default.css
@@ -1,25 +1,25 @@
-@charset "UTF-8";
-{
-margin:0;
-padding:0;
-}
+
+
+
+
+
 
 body{
 background-color:green;
 }
-#main1{
+.box{
   background-color:red;
  width:300px;
+ margin:5px;
+ float:left;
   }
-  #main2{
-  background-color:blue;
- float:right;
-  }
+
   aside{
     background-color:green;
   }
   aside{
     background-color:purple;
  width :200;
+ float:right;
   }
   
